--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,4 +15,6 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.1"
   }
+  
 }
+
